[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Sound_Players/SFX_Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFX/small_hit_react_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/SFX/med_hit_react_1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/SFX/large_hit_react_1.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/SFX/small_weapon_hit_1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/med_weapon_hit_1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/large_weapon_hit_1.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/player_swing_1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/player_large_swing_1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/loud_thud_1.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/SFX/death_1.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/battle_cry_1.ogg" type="AudioStream" id=12]

[node name="SFX_Player" type="Node"]

script = ExtResource( 1 )
state_machine_path = null
ability_node_path = null

[node name="hit_react_small" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="hit_react_medium" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="hit_react_large" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="weapon_hit_small" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="weapon_hit_medium" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="weapon_hit_large" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="weapon_swing" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="weapon_swing_large" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="loud_thud" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="death" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="battle_cry" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 12 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


